# blindvault

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  app.py  build_exe.ps1  cli_entry.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
blindvault/: __init__.py  __main__.py  broker.py  cli.py  config.py  crypto.py  gui.py  pgproxy.py  policy.py  service.py
blindvault/agent/: __init__.py  envfile.py  resolver.py
blindvault/broker/: __init__.py  hardening.py  peercred.py  pgproxy.py  server.py  winpipe.py
blindvault/core/: __init__.py  session.py  store.py
blindvault/gui/: __init__.py  window.py
deploy/: setup-linux.sh
deploy/systemd/: blindvault.service
docs/: DEPLOY-linux.md  DEPLOY-windows.md  DESIGN-resolver.md  SECURITY-redteam.md
examples/: README.md  sample.env
installer/: blindvault.iss  build-windows.ps1
tests/: test_vault.py
