[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blindvault"
version = "0.8.0"
description = "A secrets vault your AI agents can use but never read."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Loizos Kallinos" }]
keywords = ["secrets", "vault", "ai", "agents", "security", "credentials", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = ["cryptography>=42"]

[project.optional-dependencies]
# Needed only for the Windows named-pipe broker (`bv serve --pipe` / `bv proxy`).
windows = ["pywin32>=306; sys_platform == 'win32'"]

[project.urls]
Homepage = "https://github.com/psypilot/blindvault"
Issues = "https://github.com/psypilot/blindvault/issues"

[project.scripts]
blindvault = "blindvault.cli:main"
bv = "blindvault.cli:main"

[tool.setuptools]
packages = ["blindvault"]
